# concrete-mailer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  obsolete.in  pyproject.toml  setup.cfg
.github/workflows/: check-bandit.yml  check-black.yml  check-lint.yml  check-tests.yml
concrete_mailer/: __init__.py  client.py  preparers.py  utils.py
tests/: .coveragerc  README.md  requirements.txt  runtests.py  test_email_client.py  test_imports.py  test_prepare_email.py
