[metadata]
name = concrete-mailer
version = attr: concrete_mailer.__version__
author = Netsach
author_email = contact@netsach.org
description = Python package for sending rich e-mails.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE Version 3
license-file = LICENSE
home-page = https://github.com/Netsach/concrete-mailer/
project_urls =
    Bug Tracker = https://github.com/Netsach/concrete-mailer/issues
    Documentation = https://github.com/Netsach/concrete-mailer/blob/master/README.md
    Source Code = https://github.com/Netsach/concrete-mailer/
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    premailer>=3.6.1,<4
    beautifulsoup4>=4.8.0,<5
    jinja2>=2.10.1,<3

[options.extras_require]
tests =
    mock
    pytest-cov
    pytest
    codecov
security =
    bandit
lint =
    pylint
lint_py3 =
    black
